fix heading block on mobile

--- a/src/scss/pages/case.scss
+++ b/src/scss/pages/case.scss
@@ -74,6 +74,9 @@
 
     // .heading__main
     &__main {
+        display: flex;
+        flex-direction: column;
+
         @media (min-width:$md2) {
             flex: 0 0 rem(500);
         }
@@ -129,13 +132,14 @@
     // .heading__image
     &__image {
         display: none;
+        width: 100%;
+        border-radius: 1rem;
+        overflow: hidden;
 
         @media (min-width:$md3) {
             display: block;
             height: rem(305);
-            width: 100%;
-            border-radius: 1rem;
-            overflow: hidden;
+
 
         }
     }
@@ -160,8 +164,15 @@
         line-height: 120%;
         display: flex;
         gap: 0.5rem;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
 
-        @media (min-width:$md4) {}
+        @media (min-width:$md4) {
+            flex-direction: row;
+            align-items: flex-start;
+            text-align: left;
+        }
 
         &::before {
             width: 1rem;
